--- a/styles&actions/index.scss
+++ b/styles&actions/index.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "../fonts/fonts.css";
-@import "../node_modules/normalize.css/normalize.css";
+//@import "../node_modules/normalize.css/normalize.css";
 @import "./components/header/header.css";
 @import "./components/button/button.css";
 @import "./components/hero/hero.css";
@@ -19,6 +19,10 @@ body {
   font-family: 'Outfit', sans-serif;
   background-color: $main-black;
   font-weight: 700;
+  * {
+    padding: 0;
+    margin: 0;
+  }
   div {
     box-sizing: border-box;
   }
