--- a/styles&actions/index.scss
+++ b/styles&actions/index.scss
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  box-sizing: border-box;
+}
 @import "variables";
 @import "../fonts/fonts.css";
 //@import "../node_modules/normalize.css/normalize.css";
