--- a/styles&actions/index.scss
+++ b/styles&actions/index.scss
@@ -1,13 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  border: none;
-  box-sizing: border-box;
-}
 @import "variables";
 @import "../fonts/fonts.css";
-//@import "../node_modules/normalize.css/normalize.css";
+@import "../node_modules/normalize.css/normalize.css";
 @import "./components/header/header.css";
 @import "./components/button/button.css";
 @import "./components/hero/hero.css";
