--- a/styles&actions/components/button/button.scss
+++ b/styles&actions/components/button/button.scss
@@ -12,6 +12,7 @@ button {
   background-color: $element-purple;
   color: $text-white;
   border-radius: 16px;
+  font-size: 20px;
   font-weight: 600;
   transition: background-color 0.3s ease;
   &:hover {
