--- a/styles&actions/components/button/button.css
+++ b/styles&actions/components/button/button.css
@@ -10,6 +10,7 @@ button {
   color: #FFFFFF;
   border-radius: 16px;
   font-weight: 600;
+  font-size: 20px;
   transition: background-color 0.3s ease;
 }
 .button:hover {
