--- a/styles&actions/components/about/about.css
+++ b/styles&actions/components/about/about.css
@@ -15,12 +15,15 @@
 .about__container-desc p {
   font-size: 36px;
   font-weight: 600;
-  width: 397px;
+  max-width: 397px;
   background-image: url("../../../img/steak.svg");
   background-repeat: no-repeat;
-  padding-right: 12px;
+  padding-right: 18px;
   padding-bottom: 4px;
   background-position: right bottom;
+}
+.about__container-desc span {
+  white-space: nowrap;
 }
 .about__container-features {
   display: grid;
