--- a/styles&actions/components/button/button.scss
+++ b/styles&actions/components/button/button.scss
@@ -17,14 +17,20 @@ button {
   transition: background-color 0.3s ease;
   &:hover {
     background-color: $main-black;
+    box-shadow: inset 0 0 0 1px $element-purple;
   }
   &_disabled {
     background-color: #B9B9B9;
+    &:hover {
+      color: #B9B9B9;
+      box-shadow: inset 0 0 0 1px #B9B9B9;
+
+    }
   }
   &_decline {
     background-color: $text-white;
     color: $main-black;
-    border: 2px solid $element-purple;
+    box-shadow: inset 0 0 0 1px $element-purple;
     &:hover {
       color: white;
     }
@@ -38,6 +44,7 @@ button {
   background-color: inherit;
   transition: background-color 0.4s, color 0.4s;
   border-radius: 20px 20px 0 0;
+  font-size: 16px;
   &_active {
     background-color: $main-black;
     color: $text-white;
