--- a/styles&actions/components/footer/footer.css
+++ b/styles&actions/components/footer/footer.css
@@ -32,6 +32,9 @@
   align-items: center;
   justify-content: space-between;
 }
+.footer__underline-links-rights {
+  padding: 20px 0;
+}
 .footer__underline-links-list {
   list-style-type: none;
   display: flex;
@@ -45,6 +48,11 @@
 @media (max-width: 1170px) {
   .footer__links {
     justify-content: flex-start;
+  }
+}
+@media (max-width: 940px) {
+  .footer__underline-links-list {
+    display: none;
   }
 }
 @media (max-width: 630px) {
