--- a/styles&actions/components/modal/modal.scss
+++ b/styles&actions/components/modal/modal.scss
@@ -8,6 +8,7 @@
   height: 100%;
   font-size: 14px;
   display: none;
+  z-index: 3;
   &__content {
     position: absolute;
     top: 50%;
@@ -45,6 +46,7 @@
         margin-right: auto;
       }
     }
+
   }
 }
 
@@ -82,6 +84,13 @@
   }
 }
 
+#cookie {
+  display: block;
+  button:hover {
+    box-shadow: none;
+
+  }
+}
 .modal__content_cookie {
   top: 83%;
   max-width: 83%;
