--- a/styles&actions/index.css
+++ b/styles&actions/index.css
@@ -1,5 +1,4 @@
 @import "../fonts/fonts.css";
-@import "../node_modules/normalize.css/normalize.css";
 @import "./components/header/header.css";
 @import "./components/button/button.css";
 @import "./components/hero/hero.css";
@@ -16,10 +15,12 @@
 * {
   margin: 0;
   padding: 0;
-  outline: none;
-  border: none;
   box-sizing: border-box;
 }
+* button {
+  font-size: 20px;
+}
+
 body {
   font-family: "Outfit", sans-serif;
   background-color: #181818;
